--- a/.cloudbees/workflows/e2e.yaml
+++ b/.cloudbees/workflows/e2e.yaml
@@ -8,10 +8,10 @@ jobs:
     steps:
       - uses: cloudbees-io/register-deployed-artifact@v1
         with:
-          name: art1
-          version: ${{ cloudbees.version }}
-          url: 020229604682.dkr.ecr.us-east-1.amazonaws.com/actions/assets-findsecbugs-scanner:${{ cloudbees.version }}
-          target-environment: test
+          name: artifact3
+          version: qe-0.2
+          url: 020229604682.dkr.ecr.us-east-1.amazonaws.com/throwaway/actions/vulnerable-image:qe-0.2
+          target-environment: aspm-qa-test
   publish-evidence:
     steps:
       - name: publish evidence
